Fix button visibility on mobile and cursor on desktop while dragging

--- a/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
+++ b/client/src/app/features/training-view-2/add-row-button/add-row-button.component.scss
@@ -1,11 +1,11 @@
 button {
-  cursor: row-resize;
   color: grey;
   width: 100%;
   background-color: rgb(246, 246, 248);
   border: none;
   font-size: 16px;
   height: 25px;
+  cursor: move;
 }
 
 .placeholder {
